Fixed <pre> tag alignment of branching page

--- a/styles/branch.css
+++ b/styles/branch.css
@@ -55,11 +55,14 @@ ul, ol {
   padding: 20px 30px;
   margin: 20px 0;
   border-radius: 10px;
+   text-align: left !important;
 }
 
 ul li, ol li {
   margin-bottom: 10px;
   font-size: 16px;
+  text-align: left;        
+  
 }
 
 
@@ -73,7 +76,7 @@ pre {
 
 code {
   font-family: 'Courier New', monospace;
-  background-color: #222;
+  background-color: #1a1a1a;
   padding: 2px 6px;
   border-radius: 4px;
   color: #00e676;
